--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
+    <!-- 앱 실행을 위한 모듈 스크립트 추가 -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
